; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/hns/extr_hns_roce_mr.c_hns_roce_sw2hw_mpt.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/hns/extr_hns_roce_mr.c_hns_roce_sw2hw_mpt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hns_roce_dev = type { i32 }
%struct.hns_roce_cmd_mailbox = type { i32 }

@HNS_ROCE_CMD_SW2HW_MPT = common dso_local global i32 0, align 4
@HNS_ROCE_CMD_TIMEOUT_MSECS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hns_roce_dev*, %struct.hns_roce_cmd_mailbox*, i64)* @hns_roce_sw2hw_mpt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hns_roce_sw2hw_mpt(%struct.hns_roce_dev* %0, %struct.hns_roce_cmd_mailbox* %1, i64 %2) #0 {
  %4 = alloca %struct.hns_roce_dev*, align 8
  %5 = alloca %struct.hns_roce_cmd_mailbox*, align 8
  %6 = alloca i64, align 8
  store %struct.hns_roce_dev* %0, %struct.hns_roce_dev** %4, align 8
  store %struct.hns_roce_cmd_mailbox* %1, %struct.hns_roce_cmd_mailbox** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.hns_roce_dev*, %struct.hns_roce_dev** %4, align 8
  %8 = load %struct.hns_roce_cmd_mailbox*, %struct.hns_roce_cmd_mailbox** %5, align 8
  %9 = getelementptr inbounds %struct.hns_roce_cmd_mailbox, %struct.hns_roce_cmd_mailbox* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i64, i64* %6, align 8
  %12 = load i32, i32* @HNS_ROCE_CMD_SW2HW_MPT, align 4
  %13 = load i32, i32* @HNS_ROCE_CMD_TIMEOUT_MSECS, align 4
  %14 = call i32 @hns_roce_cmd_mbox(%struct.hns_roce_dev* %7, i32 %10, i32 0, i64 %11, i32 0, i32 %12, i32 %13)
  ret i32 %14
}

declare dso_local i32 @hns_roce_cmd_mbox(%struct.hns_roce_dev*, i32, i32, i64, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
